# mycode

./: .gitignore  CMakeLists.txt  aarch64-himix100-linux.toolchain.cmake  main  main.cpp  reademe.md  readme.md  recordSort.cpp  test.txt
base64/: 1  Base64.h  imgToBase64
data/: base64_new.txt  encode.txt
lib/hisi/: libz.so.1
myPython/: demo1.py  foo.txt  pythonStudy.ipynb  socketClient.py  socketServer.py  testfile  threadTest.py  工作日志.md
myPython/MyGame/: ball.py  main.py
myPython/bishi/: huawei1.py  huawei2.py
src/AdressBookManage/: AdressBookManage.cpp  AdressBookManage.h  main.cpp
src/base64/: base64.txt  imgToBase64.cpp  main  main.cpp  test.cpp
src/cgi/: cgic.h  getVersionInfo.cpp  setTime.cpp
src/getDirPath/: getDirPath.cpp
src/include/: common.cpp  common.h
src/studyC++/: MyArray.hpp  STL算法.cpp  array.cpp  classStudy.cpp  dataType.cpp  dequeStudy.cpp  func.cpp  listStudy.cpp  loop.cpp  main.cpp  main.h  mapStudy.cpp  pointer.cpp  setStudy.cpp  stackStudy.cpp  stlStudy.cpp  stringStudy.cpp  structStudy.cpp  tempCodeRunnerFile.cpp  template.cpp  vectorStudy.cpp  函数对象.cpp  员工分组.cpp  多态.cpp  文件操作.cpp  继承.cpp
src/unzip/: testUnzip.cpp  testZip.cpp
src/数据结构与算法/: Graph.cpp  Graph.h  LinkList.hpp  MyAlgorithm.hpp  MyQueue.hpp  MySort.hpp  MyTree.hpp  Sqlist.hpp  main.cpp  remade.md  stack.hpp  text.cpp  union_find.cpp
